# AoC2021

./: .gitignore  AoC2021.cabal  package-lock.json  package.json  run.sh  spago.dhall
src/: DoubleSidedQueue.purs  E1.purs  E10.purs  E11.purs  E12.purs  E13.purs  E14.purs  E15.hs  E16.hs  E17.hs  E2.purs  E3.purs  E4.purs  E5.purs  E6.purs  E7.purs  E8.purs  E9.purs  Interview.hs  Iterator.purs  Main.hs  Main.purs  ParserUtils.purs  Queue.purs  ReadLines.js  ReadLines.purs  SafeString.purs  Undefined.js  Utils.purs
test/: Iterator.purs  Main.hs  Main.purs  Queue.purs  TestE4.purs
