cabal-version:      2.4
name:               AoC2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

executable Main
    main-is: Interview.hs

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        array,
        containers,
        generic-arbitrary ^>=0.1.0,
        PSQueue,
        parsec ^>=3.1.15.0,
        QuickCheck ^>=2.14.2,
        generic-arbitrary ^>=0.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite TestMain
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends: 
        base ^>=4.14.3.0,
        hspec ^>= 2.7.4,
        QuickCheck ^>=2.14.2,
        test-framework ^>= 0.8.2.0,
        test-framework-quickcheck2,
        Questionnaire
